--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -1,10 +1,10 @@
-/* Filename - styles/AboutUs.css */
 .about-us {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #f5f5f5;
+    padding: 20px; /* Добавлено для устройств с маленькими экранами */
 }
 
 .about-us-content {
@@ -36,4 +36,56 @@ li {
 ul {
     list-style-type: disc;
     margin-left: 20px;
+}
+
+@media screen and (max-width: 768px) {
+    .about-us-content {
+        max-width: 90%; /* Уменьшаем максимальную ширину */
+    }
+
+    h1 {
+        font-size: 20px; /* Уменьшаем размер заголовков */
+        margin-bottom: 12px;
+    }
+
+    h2 {
+        font-size: 18px; /* Уменьшаем размер заголовков */
+        margin-top: 12px;
+        margin-bottom: 6px;
+    }
+
+    p,
+    li {
+        font-size: 14px; /* Уменьшаем размер текста */
+        line-height: 1.4;
+        margin-bottom: 6px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .about-us-content {
+        padding: 10px; /* Уменьшаем внутренний отступ */
+    }
+
+    h1 {
+        font-size: 18px; /* Уменьшаем размер заголовков */
+        margin-bottom: 10px;
+    }
+
+    h2 {
+        font-size: 16px; /* Уменьшаем размер заголовков */
+        margin-top: 10px;
+        margin-bottom: 4px;
+    }
+
+    p,
+    li {
+        font-size: 12px; /* Уменьшаем размер текста */
+        line-height: 1.3;
+        margin-bottom: 4px;
+    }
+
+    ul {
+        margin-left: 15px; /* Уменьшаем отступ у списка */
+    }
 }
