--- a/src/styles/SubMenuStyles.css
+++ b/src/styles/SubMenuStyles.css
@@ -58,17 +58,20 @@ span {
     }
 }
 /* Медиа-запрос для устройств с шириной экрана до 768px */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .submenu-container {
-    position: absolute;
-    top: 80px;
-    right: -100.5%;
-    width: 377px;
-    background-color: #34495e;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+   display: none;
 
 }
 }
+
+@media screen and (min-width: 1024px) {
+    .container-services {
+        display: none;
+
+    }
+}
+
 
 
 .sidebar-link:hover div > svg,
