--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -37,8 +37,11 @@ ul {
     list-style-type: disc;
     margin-left: 20px;
 }
-
 @media screen and (max-width: 768px) {
+    .about-us {
+        padding-top: 70px; /* Добавляем отступ сверху */
+    }
+
     .about-us-content {
         max-width: 90%; /* Уменьшаем максимальную ширину */
     }
