--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -2,14 +2,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     padding: 20px; /* Добавлено для устройств с маленькими экранами */
 }
 
 .about-us-content {
+    padding: 0 20px;
     max-width: 800px;
-    padding: 20px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
@@ -67,6 +66,7 @@ ul {
 
 @media screen and (max-width: 480px) {
     .about-us-content {
+
         padding: 10px; /* Уменьшаем внутренний отступ */
     }
 
