--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -2,16 +2,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
-    padding: 20px; /* Добавлено для устройств с маленькими экранами */
+    padding: 20px;
 }
 
 .about-us-content {
-    padding: 0 20px;
+    padding: 20px;
     max-width: 800px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    background-color: #fcfafa;
+    border: 2px solid #b7bfc0;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin: 0 auto;
+}
+
+.about-us-content p {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #333;
 }
 
 h1 {
@@ -38,27 +45,27 @@ ul {
 }
 @media screen and (max-width: 768px) {
     .about-us {
-        padding-top: 70px; /* Добавляем отступ сверху */
+        padding-top: 70px;
     }
 
     .about-us-content {
-        max-width: 90%; /* Уменьшаем максимальную ширину */
+        max-width: 90%;
     }
 
     h1 {
-        font-size: 20px; /* Уменьшаем размер заголовков */
+        font-size: 20px;
         margin-bottom: 12px;
     }
 
     h2 {
-        font-size: 18px; /* Уменьшаем размер заголовков */
+        font-size: 18px;
         margin-top: 12px;
         margin-bottom: 6px;
     }
 
     p,
     li {
-        font-size: 14px; /* Уменьшаем размер текста */
+        font-size: 14px;
         line-height: 1.4;
         margin-bottom: 6px;
     }
@@ -67,28 +74,28 @@ ul {
 @media screen and (max-width: 480px) {
     .about-us-content {
 
-        padding: 10px; /* Уменьшаем внутренний отступ */
+        padding: 10px;
     }
 
     h1 {
-        font-size: 18px; /* Уменьшаем размер заголовков */
+        font-size: 18px;
         margin-bottom: 10px;
     }
 
     h2 {
-        font-size: 16px; /* Уменьшаем размер заголовков */
+        font-size: 16px;
         margin-top: 10px;
         margin-bottom: 4px;
     }
 
     p,
     li {
-        font-size: 12px; /* Уменьшаем размер текста */
+        font-size: 12px;
         line-height: 1.3;
         margin-bottom: 4px;
     }
 
     ul {
-        margin-left: 15px; /* Уменьшаем отступ у списка */
+        margin-left: 15px;
     }
 }
