--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -69,7 +69,8 @@
 
 @media only screen and (max-width: 600px) {
     .HeaderTitle {
-       display: none;
+        font-size: 10px;
+        text-align: center;
 
     }
 
